name:                logo
version:             0.1.0.0
synopsis:            Generating the logo for Mokshasoft AB (mokshasoft.com)
description:         Using ImplicitCAD (implicitcad.org) to generate a logo.
license:             Unlicense
license-file:        LICENSE
author:              Jonas Claeson
copyright:           2018 Mokshasoft
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.10

executable logo
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Logo
  build-depends:       base
                     , implicit
  default-language:    Haskell2010
